@@ -32,19 +32,11 @@ public final class InsertAfter extends NodeCopy {
     final Data d = n.data;
     final int k = Nod.kind(node.ndType());
     d.insert(p + d.size(p, k), d.parent(p, k), md);
-    // no text merging allowed here, as this target can still be deleted or
-    // replaced (see primitive order).
-    // if text is merged, the second text node is also
-    // replaced or deleted
-    //if(!mergeTexts(d, p - 1, p)) {
-      //final int s = md.meta.size;
-      //mergeTexts(d, p + s - 1, p + s);
-    //}
   }
 
   @Override
   public void merge(final UpdatePrimitive p) {
-    c.add(((NodeCopy) p).c.getFirst());
+    insert.add(((NodeCopy) p).insert.get(0));
   }
 
   @Override
